--- a/environment.yml
+++ b/environment.yml
@@ -8,20 +8,17 @@ channels:
   - astropy
 
 dependencies:
-  - python>3.7.0
-  - numpy=1.21.4
-  - scipy=1.7.2
-  - astropy=4.3.1
-  - matplotlib=3.4.3
-  - iminuit=1.5.4
+  - python=3.9
+  - numpy=1.23
+  - scipy=1.9.1
+  - matplotlib=3.6.2
+  - astropy=5.1
+  - iminuit=2.17
   - gammapy=1.0
+  - sherpa=4.15.0
   - ipython
   - jupyter
-  - numba
-  - sherpa
-  - dill
-  - swig
   - pip
+  - jetset
   - pip:
     - agnpy
-    - jetset
