--- a/environment.yml
+++ b/environment.yml
@@ -8,15 +8,31 @@ channels:
   - astropy
 
 dependencies:
-  - python=3.9
-  - numpy
-  - scipy
-  - astropy
-  - matplotlib
-  - iminuit
   - gammapy=1.0
-  - swig
+  - python=3.9
+  - ipython=8.4
+  - cython
+  - jupyter
+  - jupyterlab=3.4.8
+  - pyyaml=6.0
+  - click=8.1.3
+  - numpy=1.23
+  - scipy=1.9.1
+  - pandas=1.5.0
+  - matplotlib=3.6.2
+  - astropy=5.1
+  - regions=0.6
+  - iminuit=2.17
+  - sherpa=4.15.0
+  - healpy=1.16.1
+  - naima=0.10.0
+  - pydantic=1.9.0
+  - emcee=3.1.3
+  - corner=2.2.1
   - pip
+  - requests
+  - tqdm
+  - swig
   - pip:
     - agnpy==0.4.0
     - git+https://github.com/andreatramacere/jetset.git@1.2.2
