--- a/environment.yml
+++ b/environment.yml
@@ -34,6 +34,7 @@ dependencies:
   - tqdm
   - swig
   - dill
+  - numba
   - pip:
     - agnpy==0.4.0
     - git+https://github.com/andreatramacere/jetset.git@1.2.2
