--- a/environment.yml
+++ b/environment.yml
@@ -1,40 +1,43 @@
+# Conda environment for Gammapy version 1.1
+# Install:    conda env create -f gammapy-1.1-environment.yml
+# Activate:   conda activate gammapy-1.1
+# Deactivate: conda deactivate
+
 name: agnpy-tutorial
 
 channels:
-  - anaconda
   - conda-forge
   - sherpa
   - andreatramacere
   - astropy
 
+variables:
+  PYTHONNOUSERSITE: "1"
+
 dependencies:
-  - gammapy=1.0
   - python=3.9
-  - ipython=8.4
+  - gammapy=1.1
+  - ipython=8.7.0
   - cython
   - jupyter
-  - jupyterlab=3.4.8
+  - jupyterlab=3.5
   - pyyaml=6.0
   - click=8.1.3
-  - numpy=1.23
-  - scipy=1.9.1
-  - pandas=1.5.0
-  - matplotlib=3.6.2
-  - astropy=5.1
-  - regions=0.6
-  - iminuit=2.17
-  - sherpa=4.15.0
-  - healpy=1.16.1
-  - naima=0.10.0
-  - pydantic=1.9.0
+  - numpy=1.24
+  - scipy=1.10.1
+  - pandas=1.5.2
+  - matplotlib=3.7
+  - astropy=5.3
+  - regions=0.7
+  - iminuit=2.21
+  - sherpa=4.15
+  - healpy=1.16
+  - naima=0.10
+  - pydantic=1.9
   - emcee=3.1.3
   - corner=2.2.1
   - pip
   - requests
   - tqdm
-  - swig
-  - dill
-  - numba
   - pip:
     - agnpy==0.4.0
-    - git+https://github.com/andreatramacere/jetset.git@1.2.2
